# spark

./: CMakeLists.txt  README.md  args.c  context.c  fastmem.c  msg.c  rand.c  spark.c  tm.c  tm.h
src/: CMakeLists.txt  args.c  args.h  array.c  array.h  buffer.h  colors.h  context.c  context.h  defs.h  fastmem.h  hash.h  mem.c  mem.h  misc.c  misc.h  msg.c  msg.h  pmodels.c  rand.c  rand.h  spark.c  tm.c  tm.h  tolerant.c
